--- a/README.org
+++ b/README.org
@@ -2,3 +2,4 @@
 + Can be used on any system with emacs installed by just copying "init.el" file.
 + Vim keybindings by default.
 + Tested on emacs version 27+ however it should work on relatively older versions.
++ Firacode font is recommended
